--- a/my-turborepo/apps/backend/package.json
+++ b/my-turborepo/apps/backend/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21"
+  },
+  "dependencies": {
+    "esbuild": "^0.20.2"
   }
 }
